# nephos

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  schema_referentiel_v3.sql  schema_v4_skos.sql
.github/workflows/: agent-review.yml  ci.yml  nightly.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 20260505_0000_init_schema_v4_skos_0001.py
docs/adr/: 0001-adopter-skos-comme-socle-du-referentiel.md  0002-python-comme-stack-dimplementation.md  0003-domaine-uri-w3id-org.md  0004-strategie-multilingue-fr-en.md  0005-licences-apache-2-et-cc-by-4.md  0009-strategie-orchestration-etl.md  0010-nephos-comme-moteur-de-validation.md  0011-protection-technique-branche-main.md  0012-gestion-vulnerabilite-py-pysec-2022-42969.md  0013-agent-reviewer-claude-code-action.md  0014-adapter-protection-pour-mainteneur-unique.md  template.md
docs/architecture/: README.md  architecture_fonctionnelle_si_meteo.md  architecture_si_meteo.md  benchmark_plateformes_meteo.md  sin_internes_smn.md
docs/architecture/docx/: architecture_fonctionnelle_si_meteo.docx  architecture_si_meteo.docx  benchmark_plateformes_meteo.docx  sin_internes_smn.docx
shapes/: nephos_metier.ttl  nephos_skos_core.ttl
src/nephos/: __init__.py  __main__.py  cli.py  config.py  db.py  logging.py
src/nephos/etl/: __init__.py  base.py  deprecation.py  exceptions.py  journal.py  runner.py
src/nephos/exporters/: __init__.py  skos.py
src/nephos/importers/: __init__.py  _unit_symbols.py  cf.py  cf_area_type.py  ecmwf_mappings.py  qudt_units.py  wmo_codes.py
src/nephos/validators/: __init__.py  quality_report.py  shacl_runner.py  skos_external.py
tests/: conftest.py  test_cli.py  test_logging.py  test_unit_symbols.py
tests/integration/: test_cli_import_status.py  test_cli_validate_all.py  test_etl_deprecation.py  test_etl_runner.py  test_etl_validation_post_import.py  test_exporter_skos.py  test_importer_cf.py  test_importer_cf_area.py  test_importer_ecmwf_mappings.py  test_importer_qudt_units.py  test_importer_wmo_codes.py  test_schema_audit.py  test_schema_audit_extended.py  test_schema_constraints.py  test_schema_views.py  test_validators_quality_report.py  test_validators_shacl.py  test_validators_shacl_metier.py  test_validators_skos_external.py
tests/integration/fixtures/: cf_area_mini.xml  cf_mini.xml  cfname_mini.def  qudt_units_mini.ttl  wmo_bufr_0_02_001_mini.ttl  wmo_bufr_0_02_001_partial.ttl
