[project]
name = "nephos"
version = "0.1.0"
description = "Référentiel SKOS de métadonnées météorologiques."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Benedicte Marty", email = "bmarty@mailo.com" },
]
keywords = ["skos", "meteorology", "vocabulary", "rdf", "referentiel"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "lxml>=5.0",
    "requests>=2.32",
    "sparqlwrapper>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.2",
    "typer>=0.12",
    "rich>=13.7",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-postgresql>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
    "pre-commit>=3.7",
]

[project.scripts]
nephos = "nephos.cli:app"

[project.urls]
Homepage = "https://github.com/benedictemarty/nephos"
Repository = "https://github.com/benedictemarty/nephos"
Issues = "https://github.com/benedictemarty/nephos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nephos"]

# ----- uv (gestionnaire de dépendances) -----
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-postgresql>=6.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
    "pre-commit>=3.7",
]

# ----- Ruff (lint + format) -----
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # ligne trop longue (laissé au formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts autorisés dans les tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- Mypy (typage strict) -----
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
files = ["src/nephos"]

[[tool.mypy.overrides]]
module = [
    "rdflib.*",
    "pyshacl.*",
    "SPARQLWrapper.*",
    "lxml.*",
]
ignore_missing_imports = true

# ----- Pytest -----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests d'intégration nécessitant une base PostgreSQL",
    "slow: tests lents (>1s)",
]

[tool.coverage.run]
source = ["src/nephos"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
