[project]
name = "nephos"
version = "0.1.0"
description = "Référentiel SKOS de métadonnées météorologiques."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Benedicte Marty", email = "bmarty@mailo.com" },
]
keywords = ["skos", "meteorology", "vocabulary", "rdf", "referentiel"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "lxml>=5.0",
    "defusedxml>=0.7",
    "requests>=2.32",
    "sparqlwrapper>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "psycopg[binary]>=3.2",
    "typer>=0.12",
    "rich>=13.7",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    # Tests
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-postgresql>=6.0",
    "hypothesis>=6.112",
    "mutmut>=3.0",
    # Lint / format / typage
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
    # Sécurité
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    # Qualité du code et des dépendances
    "deptry>=0.21",
    "interrogate>=1.7",
    "vulture>=2.13",
    "validate-pyproject[all]>=0.23",
    # Pre-commit driver
    "pre-commit>=3.7",
]

[project.scripts]
nephos = "nephos.cli:app"

[project.urls]
Homepage = "https://github.com/benedictemarty/nephos"
Repository = "https://github.com/benedictemarty/nephos"
Issues = "https://github.com/benedictemarty/nephos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nephos"]

# ----- Dependency groups (PEP 735) — remplace l'ancien [tool.uv].dev-dependencies -----
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-postgresql>=6.0",
    "hypothesis>=6.112",
    "mutmut>=3.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-requests",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "deptry>=0.21",
    "interrogate>=1.7",
    "vulture>=2.13",
    "validate-pyproject[all]>=0.23",
    "pre-commit>=3.7",
    "types-defusedxml>=0.7.0.20260504",
]

# ----- Ruff (lint + format) -----
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # ligne trop longue (laissé au formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts autorisés dans les tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- Mypy (typage strict ++) -----
[tool.mypy]
python_version = "3.12"
strict = true
# Renforcements en plus de strict :
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
disallow_any_explicit = false  # toléré pour LogRecord.__dict__ items
disallow_any_generics = true
disallow_untyped_decorators = true
implicit_reexport = false
strict_equality = true
extra_checks = true
files = ["src/nephos"]

[[tool.mypy.overrides]]
module = [
    "rdflib.*",
    "pyshacl.*",
    "SPARQLWrapper.*",
    "lxml.*",
]
ignore_missing_imports = true

# ----- Pytest -----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests d'intégration nécessitant une base PostgreSQL",
    "slow: tests lents (>1s)",
]

[tool.coverage.run]
source = ["src/nephos"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

# ----- Bandit (analyse de sécurité statique) -----
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "__pycache__"]
skips = [
    "B101",  # assert utilisé : OK dans les helpers internes
]

# ----- Mutmut (mutation testing) — invocation manuelle, pas dans pre-commit -----
[tool.mutmut]
paths_to_mutate = "src/nephos/"
runner = "pytest -x -q"
tests_dir = "tests/"
backup = false

# ----- Deptry (dépendances inutilisées ou manquantes) -----
[tool.deptry]
known_first_party = ["nephos"]
extend_exclude = ["tests", "alembic"]

[tool.deptry.per_rule_ignores]
# DEP002 : dépendances déclarées mais non encore importées.
# Beaucoup de runtime-deps sont prévues pour les sprints d'import
# (E4-*, E5-*, E6-*) — on les retire de cette liste à mesure
# qu'elles entrent dans le code.
DEP002 = [
    # Sprint 2 — pipeline d'import
    "rdflib",
    "lxml",
    "requests",
    "sparqlwrapper",
    # Sprint 3 — validation
    "pyshacl",
    # Utilisées via entry points / commandes (pas d'import direct)
    "psycopg",
    "alembic",
    # Dev-deps non reconnues comme telles via PEP 735 dans la version
    # actuelle de deptry. À supprimer dès que deptry > 0.21 supporte
    # mieux les dependency-groups.
    "pytest",
    "pytest-cov",
    "pytest-postgresql",
    "hypothesis",
    "mutmut",
    "ruff",
    "mypy",
    "types-requests",
    "bandit",
    "pip-audit",
    "deptry",
    "interrogate",
    "vulture",
    "validate-pyproject",
    "pre-commit",
]

# ----- Interrogate (couverture des docstrings) -----
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = false
ignore-module = false
fail-under = 70
exclude = ["tests", "alembic", ".venv", "venv"]
verbose = 1
quiet = false
color = true

# ----- Vulture (dead code detection) — invocation manuelle (faux positifs) -----
[tool.vulture]
paths = ["src/nephos"]
min_confidence = 80
exclude = ["tests/"]
ignore_decorators = ["@app.command", "@app.callback", "@*_app.command"]
